--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -17,6 +18,20 @@ h1{
 .half-width img{
     width: 116%;
     position: relative;
-    top: -5px;
-    right: -3px;
+    top: 3px;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, hsla(120, 64%, 65%, 0.884), rgb(77, 219, 45));
+    padding: 10px 25px;
+    border-radius: 5px;
+    color: black;
+    
 }
